<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/q_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:hint="@string/q_hint"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/q_in_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:hint="@string/q_in_title_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/q_et" />

        <EditText
            android:id="@+id/sources_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:hint="@string/sources_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/q_in_title_et" />

        <EditText
            android:id="@+id/from_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/from_hint"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sources_et" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@id/from_et"
            app:layout_constraintEnd_toStartOf="@id/to_et"
            app:layout_constraintStart_toEndOf="@id/from_et"
            app:layout_constraintTop_toTopOf="@id/from_et" />

        <EditText
            android:id="@+id/to_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_4dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:hint="@string/to_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/separator"
            app:layout_constraintTop_toBottomOf="@id/sources_et" />

        <TextView
            android:id="@+id/language_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_et" />

        <RadioButton
            android:id="@+id/ar_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ar_country"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toStartOf="@id/de_rb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/language_txt" />

        <RadioButton
            android:id="@+id/de_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/de_country"
            app:layout_constraintEnd_toStartOf="@id/en_rb"
            app:layout_constraintStart_toEndOf="@id/ar_rb"
            app:layout_constraintTop_toBottomOf="@id/language_txt" />

        <RadioButton
            android:id="@+id/en_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/en_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/de_rb"
            app:layout_constraintTop_toBottomOf="@id/language_txt" />

        <RadioButton
            android:id="@+id/es_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/es_country"
            app:layout_constraintEnd_toStartOf="@id/fr_rb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ar_rb" />

        <RadioButton
            android:id="@+id/fr_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fr_country"
            app:layout_constraintEnd_toStartOf="@id/he_rb"
            app:layout_constraintStart_toEndOf="@id/es_rb"
            app:layout_constraintTop_toBottomOf="@id/ar_rb" />

        <RadioButton
            android:id="@+id/he_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/he_country"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fr_rb"
            app:layout_constraintTop_toBottomOf="@id/ar_rb" />

        <RadioButton
            android:id="@+id/it_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/it_country"
            app:layout_constraintEnd_toStartOf="@id/nl_rb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/es_rb" />

        <RadioButton
            android:id="@+id/nl_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nl_country"
            app:layout_constraintEnd_toStartOf="@id/no_rb"
            app:layout_constraintStart_toEndOf="@id/it_rb"
            app:layout_constraintTop_toBottomOf="@id/es_rb" />

        <RadioButton
            android:id="@+id/no_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nl_rb"
            app:layout_constraintTop_toBottomOf="@id/es_rb" />

        <RadioButton
            android:id="@+id/pt_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pt_country"
            app:layout_constraintEnd_toStartOf="@id/ru_rb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/it_rb" />

        <RadioButton
            android:id="@+id/ru_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ru_country"
            app:layout_constraintEnd_toStartOf="@id/se_rb"
            app:layout_constraintStart_toEndOf="@id/pt_rb"
            app:layout_constraintTop_toBottomOf="@id/it_rb" />

        <RadioButton
            android:id="@+id/se_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/se_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ru_rb"
            app:layout_constraintTop_toBottomOf="@id/it_rb" />

        <RadioButton
            android:id="@+id/zh_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zh_country"
            app:layout_constraintEnd_toStartOf="@id/ru_rb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pt_rb" />

        <RadioButton
            android:id="@+id/all_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            app:layout_constraintEnd_toEndOf="@id/ru_rb"
            app:layout_constraintStart_toStartOf="@id/ru_rb"
            app:layout_constraintTop_toBottomOf="@id/pt_rb" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit_filter"
            app:layout_constraintTop_toBottomOf="@id/all_rb" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>